--- a/VCS/AEON/New Group/Cell/outlet_list_cell/OutletListTableViewCell.xib
+++ b/VCS/AEON/New Group/Cell/outlet_list_cell/OutletListTableViewCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -18,7 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="KGk-i7-Jjw" customClass="OutletListTableViewCell" customModule="AEONVCS" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="KGk-i7-Jjw" customClass="OutletListTableViewCell" customModule="AEONMember" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="83"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -29,23 +30,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="83"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marker-mobile" translatesAutoresizingMaskIntoConstraints="NO" id="hnZ-zl-dW9">
-                                <rect key="frame" x="5" y="21.5" width="40" height="40"/>
+                                <rect key="frame" x="10" y="26.5" width="30" height="30"/>
+                                <color key="backgroundColor" red="0.83921568627450982" green="0.83921568627450982" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="0NW-yr-QLD"/>
-                                    <constraint firstAttribute="height" constant="40" id="pWm-3f-jO6"/>
+                                    <constraint firstAttribute="width" constant="30" id="CIb-xF-x6F"/>
+                                    <constraint firstAttribute="height" constant="30" id="L5Z-jF-J53"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="axh-rv-wIT">
-                                <rect key="frame" x="55" y="5" width="185.5" height="73"/>
+                                <rect key="frame" x="45" y="5" width="195" height="73"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Name Name Name Name Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hcy-cV-Ene">
-                                        <rect key="frame" x="0.0" y="5" width="185.5" height="53"/>
+                                        <rect key="frame" x="0.0" y="5" width="195" height="53"/>
                                         <fontDescription key="fontDescription" name="PyidaungsuBook-Bold" family="Pyidaungsu Book" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="address address address address address address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GjO-on-tCt">
-                                        <rect key="frame" x="0.0" y="68" width="185.5" height="23.5"/>
+                                        <rect key="frame" x="0.0" y="68" width="195" height="23.5"/>
                                         <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -62,28 +69,35 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HpZ-Oo-sbA">
-                                <rect key="frame" x="241.5" y="5" width="49.5" height="68"/>
+                                <rect key="frame" x="241" y="26.5" width="50" height="30"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="9.9 km" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UQh-gc-IyE">
-                                        <rect key="frame" x="2" y="0.0" width="46.5" height="68"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="9.9 km" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UQh-gc-IyE">
+                                        <rect key="frame" x="2" y="0.0" width="47" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" systemColor="systemPinkColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="UQh-gc-IyE" firstAttribute="centerY" secondItem="HpZ-Oo-sbA" secondAttribute="centerY" id="3Iu-yA-64P"/>
+                                    <constraint firstAttribute="width" constant="50" id="G5x-G4-kJO"/>
                                     <constraint firstAttribute="bottom" secondItem="UQh-gc-IyE" secondAttribute="bottom" id="IHd-RY-rCB"/>
                                     <constraint firstAttribute="trailing" secondItem="UQh-gc-IyE" secondAttribute="trailing" constant="1" id="ZHe-Xe-zny"/>
                                     <constraint firstItem="UQh-gc-IyE" firstAttribute="leading" secondItem="HpZ-Oo-sbA" secondAttribute="leading" constant="2" id="iLI-yy-AE6"/>
+                                    <constraint firstAttribute="height" constant="30" id="lJd-Gx-phc"/>
                                     <constraint firstItem="UQh-gc-IyE" firstAttribute="top" secondItem="HpZ-Oo-sbA" secondAttribute="top" id="nL0-Om-KO2"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forward" translatesAutoresizingMaskIntoConstraints="NO" id="LBI-xV-ym4">
-                                <rect key="frame" x="291" y="29" width="25" height="25"/>
+                                <rect key="frame" x="291" y="31.5" width="25" height="20"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="LuO-kT-FuC"/>
+                                    <constraint firstAttribute="height" constant="20" id="LuO-kT-FuC"/>
                                     <constraint firstAttribute="width" constant="25" id="PoV-Km-UxL"/>
                                 </constraints>
                             </imageView>
@@ -91,17 +105,16 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="axh-rv-wIT" secondAttribute="bottom" constant="5" id="4xi-Id-sXx"/>
-                            <constraint firstAttribute="bottom" secondItem="HpZ-Oo-sbA" secondAttribute="bottom" constant="10" id="95M-ex-Zq5"/>
+                            <constraint firstItem="HpZ-Oo-sbA" firstAttribute="centerY" secondItem="9kX-0a-Tbc" secondAttribute="centerY" id="Dsl-H0-fCI"/>
                             <constraint firstItem="LBI-xV-ym4" firstAttribute="centerY" secondItem="9kX-0a-Tbc" secondAttribute="centerY" id="KhE-Md-xVU"/>
-                            <constraint firstItem="hnZ-zl-dW9" firstAttribute="leading" secondItem="9kX-0a-Tbc" secondAttribute="leading" constant="5" id="S02-6K-npy"/>
-                            <constraint firstItem="HpZ-Oo-sbA" firstAttribute="top" secondItem="9kX-0a-Tbc" secondAttribute="top" constant="5" id="cVA-Vh-mZu"/>
-                            <constraint firstItem="axh-rv-wIT" firstAttribute="leading" secondItem="hnZ-zl-dW9" secondAttribute="trailing" constant="10" id="g8W-aU-a5P"/>
+                            <constraint firstItem="hnZ-zl-dW9" firstAttribute="centerY" secondItem="9kX-0a-Tbc" secondAttribute="centerY" id="THk-W9-cUg"/>
+                            <constraint firstItem="hnZ-zl-dW9" firstAttribute="leading" secondItem="9kX-0a-Tbc" secondAttribute="leading" constant="10" id="c80-dk-bQa"/>
                             <constraint firstAttribute="trailing" secondItem="LBI-xV-ym4" secondAttribute="trailing" constant="4" id="ixK-HZ-4BF"/>
                             <constraint firstItem="axh-rv-wIT" firstAttribute="top" secondItem="9kX-0a-Tbc" secondAttribute="top" constant="5" id="nDW-7P-fyb"/>
                             <constraint firstItem="axh-rv-wIT" firstAttribute="centerY" secondItem="9kX-0a-Tbc" secondAttribute="centerY" id="oWX-TC-EUQ"/>
                             <constraint firstItem="HpZ-Oo-sbA" firstAttribute="leading" secondItem="axh-rv-wIT" secondAttribute="trailing" constant="1" id="oZZ-9r-5S4"/>
+                            <constraint firstItem="axh-rv-wIT" firstAttribute="leading" secondItem="hnZ-zl-dW9" secondAttribute="trailing" constant="5" id="rWZ-8h-ir2"/>
                             <constraint firstItem="LBI-xV-ym4" firstAttribute="leading" secondItem="HpZ-Oo-sbA" secondAttribute="trailing" id="rgu-1f-e0d"/>
-                            <constraint firstItem="hnZ-zl-dW9" firstAttribute="centerY" secondItem="9kX-0a-Tbc" secondAttribute="centerY" id="vNc-BE-5sg"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -119,6 +132,7 @@
                 <outlet property="lbAddress" destination="GjO-on-tCt" id="kWM-xL-2EF"/>
                 <outlet property="lbDistance" destination="UQh-gc-IyE" id="wdx-Xw-IFN"/>
                 <outlet property="lbName" destination="Hcy-cV-Ene" id="uDU-IT-5lS"/>
+                <outlet property="meterView" destination="HpZ-Oo-sbA" id="UmA-SY-CFI"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="108.81696428571428"/>
         </tableViewCell>
@@ -126,5 +140,8 @@
     <resources>
         <image name="forward" width="25" height="25"/>
         <image name="marker-mobile" width="25" height="25"/>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
