--- a/VCS/AEON/New Group/Cell/security_question/SecurityQuestionUpdateTableViewCell.xib
+++ b/VCS/AEON/New Group/Cell/security_question/SecurityQuestionUpdateTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +15,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="142" id="KGk-i7-Jjw" customClass="SecurityQuestionUpdateTableViewCell" customModule="AEONMember4" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="152" id="KGk-i7-Jjw" customClass="SecurityQuestionUpdateTableViewCell" customModule="AEONMember" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="142"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -26,7 +26,7 @@
                         <rect key="frame" x="8" y="0.0" width="304" height="142"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Q5-kJ-WVb">
-                                <rect key="frame" x="0.0" y="8" width="304" height="48"/>
+                                <rect key="frame" x="0.0" y="31" width="304" height="48"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="password-icon" translatesAutoresizingMaskIntoConstraints="NO" id="H2T-5o-qEb">
                                         <rect key="frame" x="8" y="8" width="32" height="32"/>
@@ -63,8 +63,8 @@
                                     <constraint firstAttribute="trailing" secondItem="IRv-fx-MNu" secondAttribute="trailing" constant="8" id="yZu-cs-hjL"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="px5-yd-HLd">
-                                <rect key="frame" x="8" y="69" width="288" height="48"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="px5-yd-HLd">
+                                <rect key="frame" x="8" y="92" width="288" height="48"/>
                                 <color key="backgroundColor" red="0.23921568627450979" green="0.42352941176470588" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="cZ8-6n-JJe"/>
@@ -83,20 +83,32 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iCn-oZ-Jw8">
-                                <rect key="frame" x="46" y="59" width="250" height="0.0"/>
+                                <rect key="frame" x="46" y="82" width="250" height="0.0"/>
                                 <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="15"/>
                                 <color key="textColor" red="0.91745740180000002" green="0.25346475839999999" blue="0.14499741790000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wpv-vf-oG2">
+                                <rect key="frame" x="5" y="8" width="294" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="15" id="9tS-YI-bud"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.71764705880000002" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="7Q5-kJ-WVb" firstAttribute="leading" secondItem="jTt-Bn-QTO" secondAttribute="leading" id="0Jv-qn-LY4"/>
+                            <constraint firstAttribute="trailing" secondItem="Wpv-vf-oG2" secondAttribute="trailing" constant="5" id="3YY-jC-5cz"/>
+                            <constraint firstItem="7Q5-kJ-WVb" firstAttribute="top" secondItem="Wpv-vf-oG2" secondAttribute="bottom" constant="8" id="AUT-d9-9Ck"/>
                             <constraint firstItem="iCn-oZ-Jw8" firstAttribute="leading" secondItem="jTt-Bn-QTO" secondAttribute="leading" constant="46" id="Lgp-Nd-rzU"/>
                             <constraint firstAttribute="trailing" secondItem="7Q5-kJ-WVb" secondAttribute="trailing" id="Ssa-3T-4if"/>
                             <constraint firstAttribute="trailing" secondItem="iCn-oZ-Jw8" secondAttribute="trailing" constant="8" id="SxH-MT-6lF"/>
+                            <constraint firstItem="Wpv-vf-oG2" firstAttribute="top" secondItem="jTt-Bn-QTO" secondAttribute="top" constant="8" id="WW4-c0-tgb"/>
                             <constraint firstAttribute="trailing" secondItem="px5-yd-HLd" secondAttribute="trailing" constant="8" id="ccv-ZL-iyz"/>
-                            <constraint firstItem="7Q5-kJ-WVb" firstAttribute="top" secondItem="jTt-Bn-QTO" secondAttribute="top" constant="8" id="fzB-HF-ylt"/>
+                            <constraint firstItem="Wpv-vf-oG2" firstAttribute="leading" secondItem="jTt-Bn-QTO" secondAttribute="leading" constant="5" id="e7R-hu-K2z"/>
                             <constraint firstItem="px5-yd-HLd" firstAttribute="leading" secondItem="jTt-Bn-QTO" secondAttribute="leading" constant="8" id="mQO-em-NQF"/>
                             <constraint firstItem="iCn-oZ-Jw8" firstAttribute="top" secondItem="7Q5-kJ-WVb" secondAttribute="bottom" constant="3" id="sCf-gu-nhd"/>
                             <constraint firstItem="px5-yd-HLd" firstAttribute="top" secondItem="iCn-oZ-Jw8" secondAttribute="bottom" constant="10" id="uyY-Tq-yM3"/>
@@ -115,6 +127,7 @@
                 <outlet property="btnUpdate" destination="px5-yd-HLd" id="MBz-z7-SOQ"/>
                 <outlet property="ivPasswordVisible" destination="IRv-fx-MNu" id="cS8-pQ-Zh2"/>
                 <outlet property="lbMessage" destination="iCn-oZ-Jw8" id="APL-a5-ADW"/>
+                <outlet property="passwordTitle" destination="Wpv-vf-oG2" id="pz4-C0-9uj"/>
                 <outlet property="tfPassword" destination="K8s-Cr-3jA" id="qhY-mH-f6V"/>
             </connections>
             <point key="canvasLocation" x="140.80000000000001" y="190.70464767616193"/>
