--- a/VCS/AEON/New Group/storyboard/DA.storyboard
+++ b/VCS/AEON/New Group/storyboard/DA.storyboard
@@ -10818,7 +10818,7 @@
             <size key="intrinsicContentSize" width="164" height="42.80078125"/>
         </designable>
         <designable name="gVS-Zj-Kwt">
-            <size key="intrinsicContentSize" width="353" height="39.220703125"/>
+            <size key="intrinsicContentSize" width="183.5" height="34"/>
         </designable>
         <designable name="oAJ-AM-XSZ">
             <size key="intrinsicContentSize" width="164" height="42.80078125"/>
